ST: Stabilize system tests on testing farm and other execution environments (#10166)
Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>